--- a/src/app/_components/AdminBar/index.module.scss
+++ b/src/app/_components/AdminBar/index.module.scss
@@ -6,7 +6,7 @@
   display: block;
   visibility: hidden;
   opacity: 0;
-  background-color: var(--theme-elevation-100);
+  background-color: var(--color-white-100);
   transition: opacity 150ms linear;
 }
 
