--- a/src/app/_css/colors.scss
+++ b/src/app/_css/colors.scss
@@ -94,6 +94,12 @@
 
   --color-gray-500: rgba(164, 161, 170, 1);
   --color-green-500: rgba(60, 209, 57, 1);
+
+  --color-dark-100: rgba(19, 17, 24, 1);
+  --color-dark-200: rgba(19, 17, 24, 1);
+  --color-gray-100: rgba(187, 187, 187, 1);
+  --color-red-100: rgba(124, 48, 48, 1);
+  --color-white-100: rgba(250, 249, 246, 1);
 }
 
 
