--- a/src/app/_components/Button/index.module.scss
+++ b/src/app/_components/Button/index.module.scss
@@ -8,12 +8,13 @@
   background-color: transparent;
   text-decoration: none;
   display: inline-flex;
-  padding: 10px 24px;
+  padding: 8px 30px;
   font-family: inherit;
   line-height: inherit;
   font-size: inherit;
-  border-radius: 10px;
+  border-radius: 5px;
 }
+
 
 .content {
   display: flex;
@@ -39,6 +40,11 @@
   color: var(--theme-elevation-0);
 }
 
+.appearance--primary:hover {
+  background-color: var(--color-red-100);
+  transition: 0.3s ease-out 100ms;
+}
+
 .appearance--secondary {
   background-color: transparent;
   box-shadow: inset 0 0 0 1px var(--theme-elevation-1000);
@@ -61,7 +67,7 @@
 
 .appearance--none {
   padding: 0;
-  color: var(--theme-text);
+  color: var(--color-dark-100);
 
   &:local() {
     .label {
