--- a/src/app/_components/Footer/FooterComponent/index.module.scss
+++ b/src/app/_components/Footer/FooterComponent/index.module.scss
@@ -2,40 +2,20 @@
 
 .footer {
   padding: 30px 0;
-  background-color: var(--theme-elevation-1000);
-  color: var(--theme-elevation-0);
+  background-color: var(--color-white-100);
+  border-top: 3px double var(--color-gray-100);
 
   @include small-break {
     padding: calc(var(--base) * 2) 0;
   }
 }
 
-
-.inclusions {
-  display: grid;
-  justify-content: center;
-  gap: 30px;
-  padding: 0;
-  grid-template-columns: repeat(4, 1fr);
-  margin: 100px 0;
-
-  @include large-break {
-    grid-template-columns: repeat(2, 1fr);
-  }
-
-  @include mid-break {
-    margin: 60px 0;
-  }
-
-  @include extra-small-break {
-    grid-template-columns: 1fr;
+.footerLinks a{
+  @include small-break {
+    display: flex;
+    justify-content: center;
   }
 }
-
-.icon {
-  margin-bottom: 16px;
-}
-
 
 :global([data-theme='dark']) {
   .footer {
@@ -59,21 +39,17 @@
   }
 }
 
-.logo {
-  width: 170px;
+.logo{
+  margin-bottom: 10px;
 }
 
-.hr {
-  border-color: var(--color-white-500-20);
+.link{
+  padding: 5px 0;
 }
 
 .socialLinks {
   display: flex;
-  gap: 20px;
-}
-
-.socialLinkItem {
-  width: 100%;
+  gap: 10px;
 }
 
 .socialIcon {
