--- a/src/app/_components/Categories/CategoryCard/index.module.scss
+++ b/src/app/_components/Categories/CategoryCard/index.module.scss
@@ -2,14 +2,15 @@
 
 .card {
   position: relative;
-  background-color: var(--color-dark-50);
-  min-height: 360px;
+  background-color: var(--color-white-200);
+  min-height: 500px;
   width: 100%;
   display: flex;
   align-items: flex-end;
   justify-content: center;
   padding: 20px;
   cursor: pointer;
+  border-radius: 5px;
 
   background-size: cover;
   background-position: center;
@@ -17,9 +18,10 @@
 }
 
 .title {
-  border-radius: 10px;
-  padding: 16px;
+  font-size: 20px;
+  padding: 4px;
+  height: 100%;
   width: 100%;
-  text-align: center;
-  background-color: white;
+  text-align: left;
+  background-color: transparent;
 }
