--- a/src/app/_components/RichText/index.module.scss
+++ b/src/app/_components/RichText/index.module.scss
@@ -5,4 +5,11 @@
   :last-child {
     margin-bottom: 0;
   }
+
+  h2{
+    color: var(--color-white-200);
+  }
+  h6{
+    color: var(--color-white-200);
+  }
 }
