--- a/src/app/_css/colors.scss
+++ b/src/app/_css/colors.scss
@@ -100,6 +100,7 @@
   --color-gray-100: rgba(187, 187, 187, 1);
   --color-red-100: rgba(124, 48, 48, 1);
   --color-white-100: rgba(250, 249, 246, 1);
+  --color-white-200: rgba(240, 240, 240, 1);
 }
 
 
