--- a/src/app/(pages)/[slug]/index.module.scss
+++ b/src/app/(pages)/[slug]/index.module.scss
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   gap: 100px;
-  margin-top: 100px;
+  margin: 100px 0;
 
   @include mid-break {
     gap: 60px;
