--- a/src/app/(pages)/account/index.module.scss
+++ b/src/app/(pages)/account/index.module.scss
@@ -23,3 +23,15 @@
 .noPurchases {
   font-weight: 600;
 }
+
+.subtext{
+  margin-bottom: 30px;
+}
+
+.text {
+  font-size: 20px;
+}
+
+.text:hover {
+  text-decoration: underline;
+}
