--- a/src/app/(pages)/create-account/CreateAccountForm/index.module.scss
+++ b/src/app/(pages)/create-account/CreateAccountForm/index.module.scss
@@ -17,3 +17,12 @@
 .message {
   margin-bottom: var(--base);
 }
+
+.link{
+  font-size: 16px;
+}
+
+.link:hover{
+  text-decoration: underline;
+  transition: 0.2s ease-in-out 100ms;
+}
