--- a/src/app/(pages)/create-account/index.module.scss
+++ b/src/app/(pages)/create-account/index.module.scss
@@ -11,7 +11,7 @@
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    background-image: url('/assets/images/image-2.svg');
+    background-image: url('/assets/images/background2.jpg');
   }
 
   p {
@@ -45,7 +45,7 @@
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-  background-image: url('/assets/images/image-2.svg');
+  background-image: url('/assets/images/background2.jpg');
 
   @include mid-break {
     background: none;
@@ -56,7 +56,7 @@
 
 .logo {
   margin: 60px;
-  width: 30%;
+  width: auto;
   min-width: 150px;
   z-index: 10;
 
