--- a/src/app/(pages)/login/LoginForm/index.module.scss
+++ b/src/app/(pages)/login/LoginForm/index.module.scss
@@ -24,3 +24,12 @@
   justify-content: space-between;
   width: 100%;
 }
+
+.link{
+  font-size: 16px;
+}
+
+.link:hover{
+  text-decoration: underline;
+  transition: 0.2s ease-in-out 100ms;
+}
