--- a/src/app/(pages)/recover-password/index.module.scss
+++ b/src/app/(pages)/recover-password/index.module.scss
@@ -11,7 +11,7 @@
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    background-image: url('/assets/images/image-3.svg');
+    background-image: url('/assets/images/background3.jpg');
   }
 
   p {
@@ -25,7 +25,7 @@
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-  background-image: url('/assets/images/image-3.svg');
+  background-image: url('/assets/images/background3.jpg');
 
   @include mid-break {
     background: none;
@@ -36,7 +36,7 @@
 
 .logo {
   margin: 60px;
-  width: 30%;
+  width: auto;
   min-width: 150px;
   z-index: 10;
 
