--- a/src/app/_components/Button/index.module.scss
+++ b/src/app/_components/Button/index.module.scss
@@ -40,14 +40,11 @@
   color: var(--theme-elevation-0);
 }
 
-.appearance--primary:hover {
-  background-color: var(--color-red-100);
-  transition: 0.3s ease-out 100ms;
-}
-
 .appearance--secondary {
-  background-color: transparent;
+  background-color: var(--color-white-100);
+  border: 1px solid var(--color-dark-100);
   box-shadow: inset 0 0 0 1px var(--theme-elevation-1000);
+  color: var(--color-dark-100);
 }
 
 .primary--invert {
