--- a/src/app/_heros/Product/index.module.scss
+++ b/src/app/_heros/Product/index.module.scss
@@ -2,9 +2,10 @@
 
 .productHero {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 2fr 1fr;
   gap: 30px;
   width: 100%;
+  margin-bottom: 100px;
 
   @include small-break {
     grid-template-columns: 1fr;
